tools: dependency update, fix bugs, frame tree browsing, xml verification