@@ -215,21 +215,21 @@
 			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.3.0-M1</version>
+			<version>5.3.0-RC1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.3.0-M1</version>
+			<version>5.3.0-RC1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-surefire-provider</artifactId>
-			<version>1.3.0-M1</version>
+			<version>1.3.0-RC1</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Mockito to assist unit tests with fake-DB info -->
@@ -258,83 +258,80 @@
 
 		<!-- modules-info madness tested -->
 		<!--<dependency>-->
-			<!--&lt;!&ndash; https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations &ndash;&gt;-->
-			<!--<groupId>com.fasterxml.jackson.core</groupId>-->
-			<!--<artifactId>jackson-annotations</artifactId>-->
-			<!--<version>2.9.6</version>-->
+		<!--&lt;!&ndash; https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations &ndash;&gt;-->
+		<!--<groupId>com.fasterxml.jackson.core</groupId>-->
+		<!--<artifactId>jackson-annotations</artifactId>-->
+		<!--<version>2.9.6</version>-->
 		<!--</dependency>-->
 		<!--<dependency>-->
-			<!--&lt;!&ndash; https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api &ndash;&gt;-->
-			<!--<groupId>javax.transaction</groupId>-->
-			<!--<artifactId>javax.transaction-api</artifactId>-->
-			<!--<version>1.3</version>-->
+		<!--&lt;!&ndash; https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api &ndash;&gt;-->
+		<!--<groupId>javax.transaction</groupId>-->
+		<!--<artifactId>javax.transaction-api</artifactId>-->
+		<!--<version>1.3</version>-->
 		<!--</dependency>-->
 		<!--<dependency>-->
 		<!--<groupId>javax.xml.ws</groupId>-->
 		<!--<artifactId>jaxws-api</artifactId>-->
 		<!--<version>2.3.0</version>-->
-	<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>com.sun.xml.ws</groupId>-->
-			<!--<artifactId>jaxws-rt</artifactId>-->
-			<!--<version>2.3.0.2</version>-->
 		<!--</dependency>-->
 		<!--<dependency>-->
-			<!--<groupId>org.glassfish.jaxb</groupId>-->
-			<!--<artifactId>jaxb-runtime</artifactId>-->
-			<!--<version>2.3.0</version>-->
+		<!--<groupId>com.sun.xml.ws</groupId>-->
+		<!--<artifactId>jaxws-rt</artifactId>-->
+		<!--<version>2.3.0.2</version>-->
 		<!--</dependency>-->
 		<!--<dependency>-->
-			<!--<groupId>org.glassfish.jaxb</groupId>-->
-			<!--<artifactId>jaxb-core</artifactId>-->
-			<!--<version>2.3.0.1</version>-->
+		<!--<groupId>org.glassfish.jaxb</groupId>-->
+		<!--<artifactId>jaxb-runtime</artifactId>-->
+		<!--<version>2.3.0</version>-->
 		<!--</dependency>-->
 		<!--<dependency>-->
-			<!--<groupId>javax.activation</groupId>-->
-			<!--<artifactId>javax.activation-api</artifactId>-->
-			<!--<version>1.2.0</version>-->
+		<!--<groupId>org.glassfish.jaxb</groupId>-->
+		<!--<artifactId>jaxb-core</artifactId>-->
+		<!--<version>2.3.0.1</version>-->
 		<!--</dependency>-->
 		<!--<dependency>-->
-			<!--<groupId>javax.annotation</groupId>-->
-			<!--<artifactId>javax.annotation-api</artifactId>-->
-			<!--<version>1.3.2</version>-->
+		<!--<groupId>javax.activation</groupId>-->
+		<!--<artifactId>javax.activation-api</artifactId>-->
+		<!--<version>1.2.0</version>-->
 		<!--</dependency>-->
-
-
+		<!--<dependency>-->
+		<!--<groupId>javax.annotation</groupId>-->
+		<!--<artifactId>javax.annotation-api</artifactId>-->
+		<!--<version>1.3.2</version>-->
+		<!--</dependency>-->
 
 
 		<!-- JDK11 JavaFX -->
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
 		<!--<dependency>-->
-			<!--<groupId>org.openjfx</groupId>-->
-			<!--<artifactId>javafx-graphics</artifactId>-->
-			<!--<version>11-ea+19</version>-->
+		<!--<groupId>org.openjfx</groupId>-->
+		<!--<artifactId>javafx-graphics</artifactId>-->
+		<!--<version>11-ea+19</version>-->
 		<!--</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
 		<!--<dependency>-->
-			<!--<groupId>org.openjfx</groupId>-->
-			<!--<artifactId>javafx-controls</artifactId>-->
-			<!--<version>11-ea+19</version>-->
+		<!--<groupId>org.openjfx</groupId>-->
+		<!--<artifactId>javafx-controls</artifactId>-->
+		<!--<version>11-ea+19</version>-->
 		<!--</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
 		<!--<dependency>-->
-			<!--<groupId>org.openjfx</groupId>-->
-			<!--<artifactId>javafx-base</artifactId>-->
-			<!--<version>11-ea+19</version>-->
+		<!--<groupId>org.openjfx</groupId>-->
+		<!--<artifactId>javafx-base</artifactId>-->
+		<!--<version>11-ea+19</version>-->
 		<!--</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
 		<!--<dependency>-->
-			<!--<groupId>org.openjfx</groupId>-->
-			<!--<artifactId>javafx-fxml</artifactId>-->
-			<!--<version>11-ea+19</version>-->
+		<!--<groupId>org.openjfx</groupId>-->
+		<!--<artifactId>javafx-fxml</artifactId>-->
+		<!--<version>11-ea+19</version>-->
 		<!--</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
 		<!--<dependency>-->
-			<!--<groupId>org.openjfx</groupId>-->
-			<!--<artifactId>javafx-media</artifactId>-->
-			<!--<version>11-ea+19</version>-->
+		<!--<groupId>org.openjfx</groupId>-->
+		<!--<artifactId>javafx-media</artifactId>-->
+		<!--<version>11-ea+19</version>-->
 		<!--</dependency>-->
-
 
 
 	</dependencies>
@@ -410,6 +407,12 @@
 						<exclude>**/*.txt</exclude>
 					</excludes>
 					<encoding>UTF-8</encoding>
+					<showWarnings>true</showWarnings>
+					<showDeprecation>true</showDeprecation>
+					<!-- parameters for JDK 10 -->
+					<parameters>true</parameters>
+					<compilerArgument>--add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.graphics
+					</compilerArgument>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -452,7 +455,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
-					<!-- FIX: unit test crashing VM -->
+					<!-- FIX: unit test crashing VM with modules-info -->
 					<forkCount>0</forkCount>
 				</configuration>
 				<dependencies>
@@ -460,7 +463,7 @@
 						<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
 						<groupId>org.junit.platform</groupId>
 						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.3.0-M1</version>
+						<version>1.3.0-RC1</version>
 					</dependency>
 					<dependency>
 						<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
